fix: collapse/expand Footer

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -199,17 +199,30 @@
   border-top: 1px solid #e5e5e5;
 }
 
-.footer__up-link {
+.footer__up {
   width: 36px;
   height: 36px;
 
   background-image: url("../../assets/up.svg");
 }
 
-.footer__up-link:focus,
-.footer__up-link:hover {
+.footer__up:focus,
+.footer__up:hover {
   cursor: pointer;
   background-image: url("../../assets/up-active.svg");
+}
+
+.footer__down {
+  width: 36px;
+  height: 36px;
+
+  background-image: url("../../assets/down.svg");
+}
+
+.footer__down:focus,
+.footer__down:hover {
+  cursor: pointer;
+  background-image: url("../../assets/down-active.svg");
 }
 
 .footer__copyrights {
